[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Resource/PerkNode/Resource/Perk_Down.png" type="Texture" id=1]
[ext_resource path="res://UI/Resource/PerkNode/Resource/PerkNode.gd" type="Script" id=2]

[node name="PerkNode" type="VBoxContainer"]
margin_right = 192.0
margin_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 192, 192 )
size_flags_horizontal = 12
size_flags_vertical = 12
script = ExtResource( 2 )

[node name="PerkIcon" type="TextureButton" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_right = 192.0
margin_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 3

[node name="PerkName" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_top = 162.0
margin_right = 192.0
margin_bottom = 192.0
size_flags_vertical = 1
text = "Skill 1"
align = 1
valign = 1
